apps/langflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: langflow
  namespace: langflow
spec:
  selector:
    app: langflow

  ports:
    - name: http
      port: 80
      targetPort: 7860
