apps/langflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: langflow
  namespace: langflow

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: langflow
                port:
                  number: 80
